# 2DEngine

./: .gitignore  CMakeLists.txt  engine  imgui.ini  main.cpp  renderdoc.py
include/engine/application/: application.h
include/engine/archetypes/: camera.h  entity.h  gameobject.h
include/engine/graphics/: renderable.h  shader.h  sprite.h
include/engine/gui/: editview.h  framebuffer.h  gameview.h  stylemanager.h
include/engine/gui/imgui/: editor.h  editorviews.h  scenehierarchy.h  topbar.h
include/engine/io/: input.h  inputmanager.h
include/engine/scene/: scene.h
res/config/: style.txt
res/shaders/: shader.frag  shader.vert
src/engine/application/: application.cpp  profiler.cpp
src/engine/archetypes/: camera.cpp  entity.cpp  gameobject.cpp
src/engine/graphics/: renderable.cpp  shader.cpp  sprite.cpp
src/engine/gui/: editview.cpp  framebuffer.cpp  gameview.cpp  stylemanager.cpp
src/engine/gui/imgui/: editor.cpp  editorviews.cpp  editorviewstatusbar.cpp  sceneheirarchy.cpp  scenehierarchy.cpp  topbar.cpp
src/engine/io/: input.cpp  inputmanager.cpp
src/engine/scene/: scene.cpp  scenemanager.cpp
src/glad/: glad.c
